--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 </head>
 <body>
     <script src = "./demo.js"></script> 
+    <script src = "operators.js"> </script>
+    <script src = "conditions.js"></script>
     
 </body>
 </html>
