--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src = "./demo.js"></script> 
     <script src = "operators.js"> </script>
     <script src = "conditions.js"></script>
-    
+    <script src = "loops.js"></script>
+    <button onclick="add to cart"> </button>
 </body>
 </html>
