--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script src = "operators.js"> </script>
     <script src = "conditions.js"></script>
     <script src = "loops.js"></script>
-    <button onclick="add to cart"> </button>
+    <!-- <button onclick="add to cart"></button> -->
+    <script src = "function.js"></script>
 </body>
 </html>
