--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
     <script src = "loops.js"></script>
     <!-- <button onclick="add to cart"></button> -->
     <script src = "function.js"></script>
+    <script src = "programs.js"></script>
 </body>
 </html>
